Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_projet-unity-bilal.yml
+++ b/.github/workflows/main_projet-unity-bilal.yml
@@ -44,10 +44,7 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    permissions:
-      id-token: write #This is required for requesting the JWT
-      contents: read #This is required for actions/checkout
-
+    
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -57,13 +54,6 @@ jobs:
       - name: Unzip artifact for deployment
         run: unzip release.zip
       
-      - name: Login to Azure
-        uses: azure/login@v2
-        with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_2E28372879CC45078EB07527C23D1E1B }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_97A2471E71A74A0FB3CCAF302E4693AF }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_39EF9E2E34EC4673971064C9484489D8 }}
-
       - name: 'Deploy to Azure Web App'
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
@@ -71,4 +61,4 @@ jobs:
           app-name: 'projet-unity-bilal'
           slot-name: 'Production'
           package: .
-          
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_02641784B4C0427FB025C667D1195C11 }}
